--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   sqflite: ^2.4.0
   path: ^1.9.0
   intl: ^0.19.0
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +72,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/notes-high-resolution-logo-only.png
+    - assets/tahoe.jpg
+    - assets/desert.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
